--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+#JWT_SECRET key to create user password hash
+
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+JWT_SECRET = "uZV979MTcMzP92B8SCUBOcpWYVFtcGPI"
