correção do middleware de token

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@
 #JWT_SECRET key to create user password hash
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-JWT_SECRET = "uZV979MTcMzP92B8SCUBOcpWYVFtcGPI"
+JWT_SECRET= 
